--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -133,13 +133,15 @@ BOTONESSSSSSSS
  ---------------- */
 
 .header {
-    padding: 12px 0;
-    
+    padding: 2px 0;
+  
     position: fixed;
     left: 0;
     top: 0;
     z-index: 99;
     width: 100%;
+  background-color:var(--dark-light)
+
 
     }
 .header::before {
@@ -158,6 +160,7 @@ BOTONESSSSSSSS
 }
 .header.sticky::before {
     transform: translateY(-100%);
+    
 
 }
 
@@ -167,7 +170,7 @@ BOTONESSSSSSSS
     display: flex;
     align-items: center;
     padding:0 15px;
-
+ 
 
 
 }
@@ -208,7 +211,6 @@ BOTONESSSSSSSS
     display: block;
     background-color: var(--white);
     position: relative;
-
 }
 .header .nav-toggler.active span{
 
@@ -286,7 +288,7 @@ BOTONESSSSSSSS
 
 }
 
-/*seccion de inicio*/
+/*--------------seccion de inicio--------------*/
 .home-section {
     position: relative;
     overflow:hidden;
@@ -345,3 +347,75 @@ BOTONESSSSSSSS
 
 }
 
+/* ------------SOBRE NOSOTROS S E C C I O N ------- */
+.about-section {
+    background-color: var(--dark-light);
+
+}
+
+.sec-padding {
+    padding: 80px 0;
+    
+}
+
+/* sobre nosotros titulo*/
+.section-title {
+    background-color: red;
+    width: 100%;
+    padding: 0 15px ;
+    text-align: center;
+    margin-bottom: 60px;
+
+}
+.section-title h2 {
+    font-size: 35px;
+    text-transform: capitalize;
+
+}
+.img-home {
+    width: 900px;
+}
+.about-text , .about-img {
+    width: 50%;
+    padding: 0 15px;
+}
+
+.about-text h3 {
+    font-size: 30px;
+    text-transform: capitalize;
+    margin: 0 0 15px;
+
+}
+
+p {
+    font-size: 16px;
+    
+}
+.about-text p{
+
+    margin: 0 0 15px;
+}
+
+.about-text .btn {
+    margin: 15px 0 0 ;
+}
+.about-img img {
+    width: 100%;
+    border-radius: 10px;
+}
+.about-img .img-box {
+    position: relative;
+}
+.about-img .img-box h3 {
+    position: absolute ;
+    background-color: white;
+    left: 50%;
+    width: 100%;
+    max-width: 250px;
+    text-align: center;
+    transform: translate(-50%, -50%);
+
+
+
+
+}
