--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     outline: none;
+    overflow:auto;
 
 }
 
@@ -434,17 +435,17 @@ p {
 
 
 /*------------------M E N U ---------------------*/
-
 .menu-section {
     background-color: var(--dark-light);
 
 }
-.menu-section .section-title {
+.menu-section  .section-title {
     margin-bottom: 40px;
+
 }
 .menu-tabs {
-
-    padding:  0 15px;
+ 
+    padding: 0 15px;
     width: 100%;
     text-align: center;
     margin-bottom: 30px;
@@ -456,14 +457,39 @@ p {
     text-transform: capitalize;
     border: none;
     background-color: transparent;
-    font-weight: 500;
-    color: black;
     cursor: pointer;
-    margin: 0 10px 10px;
-    transition: color 0.3s ease;
-
+    margin: 0 15px 15px;
+    display: inline-block;
 }
 
-.menu-tab-item.active {
-    color: var((--main-color))
+.menu-item {
+    width: 50%;
+    padding: 20px 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    
+}
+
+.menu-item img {
+    max-width: 100px;
+    margin-right: 15px;
+}
+.menu-item-title {
+    display: flex;
+    align-items: center;
+
+}
+.menu-item-title h3 {
+    font-size: 15px;
+    text-transform: capitalize;
+    transform: color 0.5s ease;
+}
+.menu-item-info a{
+    font-size: 10px;
+    color: white;
+    background-color: rgba(11, 163, 11, 0.836);
+    text-decoration: none;
+    cursor: pointer;
 }
