--- a/CSS/tiendas.css
+++ b/CSS/tiendas.css
@@ -9,6 +9,14 @@ height: 100%;
 margin: 0;
 padding: 0;
 }
+
+body {
+    font-size: 16px;
+    line-height: 1.5;
+    -webkit-tap-highlight-color: transparent;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 300;
+}
 nav{
   font-family: 'Poppins', sans-serif;
     font-weight: 300;   
@@ -34,4 +42,19 @@ nav{
 .phone > i{
   margin-right: 1rem;
   color: lightblue;
+}
+/*Quito el estilo a los links de ver mapa*/
+
+a:link{
+  text-decoration: none;
+  
+}
+a:visited{
+  text-decoration: none;
+  color: var(--dark);  
+}
+
+h5{
+  text-align: center;
+  padding-bottom: 8px;
 }
