--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -462,3 +462,10 @@ h4 {
     }
 }
 
+@media screen and (min-width: 651px) and (max-width: 900px){
+    .img-home {
+        margin-left: 0;
+        
+    }
+}
+
