--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -351,10 +351,15 @@ p {
 
 
 .about-text {
-    margin: 15px 0 0 ;
+    display: flex;
+    flex-direction:column;   
     
 }
 
+.btn-menu{
+    width: fit-content;
+    margin: auto;
+}
 
 .about-img img {
     width: 100%;
