arreglando  problemas en el texto de home en el  index

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -295,7 +295,7 @@ h3,h4,h5,h6 {
     margin: 0 0 5px;
 }
 .home-text p {
-    margin: 0 0 30px;
+    margin-bottom: 25px;
 }
 
 /* ------------SOBRE NOSOTROS S E C C I O N ------- */
