modificando el with del dropwdown menu

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -479,6 +479,11 @@ h4 {
     #desayuno, #almuerzo, #cena{
         font-size: 50px;
     }
+    .dropdown-menu{
+        width: 20px;
+    }
+
+
 }
  
 
