--- a/CSS/contacto.css
+++ b/CSS/contacto.css
@@ -5,6 +5,10 @@
 }
 body {
     font-family: sans-serif;
+    background-image: url(/img/fondo-contacto.jpeg);
+    background-position: center center;
+    background-repeat: none;
+    background-size: cover;
 }
 
 .formulario {
@@ -16,12 +20,13 @@ body {
     padding: 20px;
     box-shadow: 0 0 20px 1px rgba(0 ,0, 0,0.3);
     position: relative;
+    background-color: rgba(240, 248, 255, 0.726);
 }
 
 .formulario-titulo{
     text-align: center;
     margin-top: 0;
-    color: rgba(0,0,0,0.7);
+    color: green;
 
 }
 
@@ -43,6 +48,8 @@ body {
 }
 .formulario-input:focus + .formulario-label {
     margin-top: -135px;
+    z-index: 0;
+    color: green;
 }
 
 
@@ -51,7 +58,7 @@ body {
     position: absolute;
     margin-top: -85px;
     z-index: -20;
-    color: rgba(0 ,0, 0,0.5);
+    color: black;
     transition: all 0.2s;
     -webkit-transition: all 0.2s;
     -moz-transition: all 0.2s;
