--- a/public/css/recetas.css
+++ b/public/css/recetas.css
@@ -1,15 +1,7 @@
+@import url(../css/styles.css);
+
 *{margin:0;padding:0;box-sizing: border-box;}
 
-:root {
-    --main-color: rgba(255, 255, 0, 0.521);
-    --dark: #0c1023;
-    --dark-light:rgba(0, 129, 58, 0.596);
-    --white: white;
-    --white-light: #c8c8c8;
-    --shadow: 0 0 15px rgba(0,0,0,0.25);
-    scroll-behavior: smooth; 
-    
-}
 body{
     background-color: var(--dark-light)
 }
@@ -26,13 +18,15 @@ h1{
     text-align: center;
     margin-bottom: 20px;   
 }
+
+
 img{    
-   align-self: center;
+    align-self: center;
     width: 80%;
-    height:350px;
-    margin: 10px;
-    padding: 10px;
-    border-radius: 5px;
+    height: 350px;
+    margin: 10px ;
+    padding: 10px; 
+    border-radius: 15px;
 }
 .receta p{
     text-align: justify;
@@ -51,10 +45,11 @@ h4{
 }
 
 @media screen and (max-width: 600px){
-
     section{
         width: 90%;
-        margin: 10px auto;
-                 
+        margin: 10px auto;                 
+    }
+    img{    
+        height: 250px;        
     }
 }
