--- a/public/css/recetas.css
+++ b/public/css/recetas.css
@@ -11,6 +11,10 @@ section{
     margin: 10px auto;
     display:flex;
     flex-direction:column;   
+    
+}
+.toggleCard{
+    display: none;
 }
 
 
@@ -18,6 +22,11 @@ h1{
     text-align: center;
     margin-bottom: 20px;   
 }
+h3{
+    text-align: center;
+    cursor:grab
+}
+
 
 
 img{    
