--- a/views/contacto-send.hbs
+++ b/views/contacto-send.hbs
@@ -1,1 +1,16 @@
-<h1>Hola desde send</h1>
+
+
+<div class="bg-send">
+  
+    {{>header}}
+        <div class="content-send">
+            <h3>Su mensaje se envio con Exito!</h3>
+            <p>pronto nos estaremos comunicando con usted</p>
+        </div>
+    
+        <div class="btn-send">
+            <a href="/contacto"><button class="btn send">Volver </button></a>
+            <a href="/index.html"><button class="btn send" >Inicio</button></a>
+        </div>
+        
+</div>
