--- a/public/css/contacto.css
+++ b/public/css/contacto.css
@@ -3,12 +3,21 @@
     margin: 0;
     padding: 0;
 }
-body {
+.bg-contacto{
     font-family: sans-serif;
     background-image: url(/img/fondo-contacto.jpeg);
     background-position: center center;
     background-repeat: none;
     background-size: cover;
+}
+.bg-send{
+    font-family: sans-serif;
+    background-color: rgba(151, 147, 147, 0.171);
+    background-image: url(../img/message.png);
+    background-position: center center;
+    background-repeat:no-repeat;
+    height: 100vh;
+    z-index: 1;
 }
 
 .formulario {
@@ -74,4 +83,16 @@ body {
 }
 .fijar {
     margin-top: -135px;
+}
+
+.content-send {
+    text-align: center;
+    margin-top: 10rem;
+}
+.btn-send{
+    max-width: 300px;
+    margin: auto;
+    margin-top: 3rem;
+    display: flex;
+    justify-content: space-around;
 }
