--- a/views/form.hbs
+++ b/views/form.hbs
@@ -4,31 +4,50 @@
 <form action="/send" class="formulario">
         <h3 class="formulario-titulo">Contactanos</h3>
         <input type="text" class="formulario-input" name="name" autocomplete="off">
-        <label for="" class="formulario-label">Nombre</label>
+        <label for="name" class="formulario-label" id="label-name">Nombre</label>
 
         <input type="email" class="formulario-input" name="email" autocomplete="off">
-        <label for="" class="formulario-label">Correo</label>
+        <label for="email" class="formulario-label" id="label-email">Correo</label>
 
         <input type="tel" class="formulario-input" name="cel">
-        <label for="" class="formulario-label">Teléfono</label>
+        <label for="cel" class="formulario-label" id="label-cel">Teléfono</label>
 
 
         
         <input type="text" class="formulario-input" name="msj">
-        <label for="" class="formulario-label">Mensaje</label>
+        <label for="msj" class="formulario-label" id="label-msj">Mensaje</label>
 
         <button  class=" btn formulario-submit">Enviar</button>
     </form>
 
 </div>
+
 <script>
+       const inputs = document.querySelectorAll('.formulario-input')
+    for(let i = 0; i<inputs.length; i++){
+    inputs[i].addEventListener('keyup', function(){
+        if(this.value.length>0){
+            this.nextElementSibling.classList.add('fijar');
+        }else {
+            this.nextElementSibling.classList.remove('fijar')
+        }
+
+    })
+ }
+
     const form = document.querySelector("form")
-    form.addEventListener('submit', async (e) => {
-        
+
         const name = form.name.value
         const email= form.email.value
         const cel = form.cel.value
         const msj = form.msj.value
+
+     if(name.length >=3 && )
+
+    form.addEventListener('submit', async (e) => {
+        
+        
+   
        
         try{
             
