--- a/public/css/contacto.css
+++ b/public/css/contacto.css
@@ -101,3 +101,11 @@
     display: flex;
     justify-content: space-around;
 }
+
+#errName, #errEmail, #errTel, #errMsj{
+    position: absolute;
+    z-index: 2;
+    margin-top: -2.4rem;
+    color: red;
+    font-size: 0.7rem;
+}
