pase todo a hbs

--- a/views/contacto-send.hbs
+++ b/views/contacto-send.hbs
@@ -12,5 +12,5 @@
             <a href="/contacto"><button class="btn send">Volver </button></a>
             <a href="/index.html"><button class="btn send" >Inicio</button></a>
         </div>
-        
+        {{>footer}}
 </div>
