--- a/views/desayuno.hbs
+++ b/views/desayuno.hbs
@@ -1,77 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--metasTags propios-->
-    <meta name="description" content="recetas para personas con celiaquía" />
-    <meta name="keywords" content="celiaquia, recetas, comidas, sin tacc, sin gluten, brownie,pan, tortas, merienda" />
-    <!--Boostrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!--Iconos para el nav-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!--Google Fonts-->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display&display=swap" rel="stylesheet">
-    <!--Favicon-->
-    <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
-    <!--CSS propio-->
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/recetas.css">
-    <title>Recetas-Desayuno</title>
-</head>
-
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid ">
-            <a class="navbar-brand ms-5" href="#">Recetas para celíacos</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse me-5 " id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex justify-content-end " style="width:100%">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./index.html"><i class="fas fa-home"></i>
-                            Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="./index.html"><i class="fas fa-users"></i> Sobre Nosotros</a>
-                    </li>
-                    <li class="nav-item dropdown ">
-                        <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false"> <i class="fas fa-bread-slice"></i>
-                            Recetas
-                        </a>
-                        <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item " href="#desayuno">Desayuno</a></li>
-                            <li><a class="dropdown-item" href="./almuerzo.html">Almuerzo</a></li>
-                            <li><a class="dropdown-item" href="./cena.html">Cena</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./tiendas.html"><i
-                                class="fas fa-store-alt"></i>
-                            Tiendas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="./contacto" tabindex="-1" aria-disabled="true"> <i
-                                class="fab fa-contao"></i> Contacto</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <!-----------------------------------------CUERPO DESAYUNO-------------------------------------------->
+ {{>header}}
+ <!-----------------------------------------CUERPO DESAYUNO-------------------------------------------->
     <section id="desayuno" class="desayuno container">
         <h1>&mdash;Desayuno&mdash; <br> o <br> &mdash;Merienda&mdash; </h1>
         <div class="row row-cols-1 row-cols-md-2 g-4">
@@ -346,14 +274,5 @@
         </div><!--Fin row-->
     </section>
     <!--------------------Fin cuerpo----------------------->
-    <footer class="footer mt-auto py-3 bg-dark container-fluid">
-        <span class="text-muted  ms-5 ">Programa desde tu casa. Proyecto final 2021</span>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-        crossorigin="anonymous"></script>
-</body>
-</html>
+
+    {{>footer}}
