terminado hbs contacto send

--- a/views/contacto-send.hbs
+++ b/views/contacto-send.hbs
@@ -10,7 +10,8 @@
     
         <div class="btn-send">
             <a href="/contacto"><button class="btn send">Volver </button></a>
-            <a href="/index.html"><button class="btn send" >Inicio</button></a>
+            <a href="/index"><button class="btn send" >Inicio</button></a>
         </div>
-        {{>footer}}
+       
 </div>
+ {{>footer}}
