--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -9,11 +9,11 @@
             <div class="collapse navbar-collapse me-5 " id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex justify-content-end " style="width:100%">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html"><i class="fas fa-home"></i>
+                        <a class="nav-link active" aria-current="page" href="/index"><i class="fas fa-home"></i>
                             Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#sobreNosotros"><i class="fas fa-users"></i> Sobre Nosotros</a>
+                        <a class="nav-link active" href="/index"><i class="fas fa-users"></i> Sobre Nosotros</a>
                     </li>
                     <li class="nav-item dropdown ">
                         <a class="nav-link active dropdown-toggle" id="navbarDropdown" role="button"
@@ -27,7 +27,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./tiendas.html"><i
+                        <a class="nav-link active" aria-current="page" href="/tiendas"><i
                                 class="fas fa-store-alt"></i>
                             Tiendas</a>
                     </li>
