--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -20,10 +20,10 @@
                             data-bs-toggle="dropdown" aria-expanded="false"> <i class="fas fa-bread-slice"></i>
                             Recetas
                         </a>
-                        <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item " href="#desayuno">Desayuno</a></li>
-                            <li><a class="dropdown-item" href="#almuerzo">Almuerzo</a></li>
-                            <li><a class="dropdown-item" href="#cena">Cena</a></li>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item " href="/desayuno">Desayuno</a></li>
+                            <li><a class="dropdown-item" href="/almuerzo">Almuerzo</a></li>
+                            <li><a class="dropdown-item" href="/cena">Cena</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
