--- a/views/index.hbs
+++ b/views/index.hbs
@@ -83,7 +83,7 @@
                     </div>
                     <div class="card-body ">
 
-                        <a href="./desayuno.html" class="btn">Más...</a>
+                        <a href="/desayuno" class="btn">Más...</a>
                     </div>
 
                 </div>
@@ -96,7 +96,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="./desayuno.html" class="btn">Más...</a>
+                        <a href="/desayuno" class="btn">Más...</a>
                     </div>
 
                 </div>
@@ -108,7 +108,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="./desayuno.html" class="btn">Más...</a>
+                        <a href="/desayuno" class="btn">Más...</a>
                     </div>
                 </div>
             </div>
@@ -129,7 +129,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="./almuerzo.html" class="btn">Más...</a>
+                        <a href="/almuerzo" class="btn">Más...</a>
                     </div>
                 </div>
                 <div class="col-10 col-md-3 col-lg-3 col-xl-3 card">
@@ -140,7 +140,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="./almuerzo.html" class="btn">Más...</a>
+                        <a href="almuerzo" class="btn">Más...</a>
                     </div>
 
                 </div>
@@ -153,7 +153,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="./almuerzo.html" class="btn">Más...</a>
+                        <a href="/almuerzo" class="btn">Más...</a>
                     </div>
                 </div>
             </div>
@@ -177,7 +177,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="./cena.html" class="btn">Más...</a>
+                        <a href="/cena" class="btn">Más...</a>
                     </div>
 
                 </div>
@@ -189,7 +189,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="./cena.html" class="btn">Más...</a>
+                        <a href="/cena" class="btn">Más...</a>
                     </div>
                 </div>
                 <div class="col-10 col-md-3 col-lg-3 col-xl-3 card">
@@ -199,7 +199,7 @@
                             alt="">
                     </div>
                     <div class="card-body">
-                        <a href="./cena.html" class="btn">Más...</a>
+                        <a href="/cena" class="btn">Más...</a>
                     </div>
                 </div>
             </div>
