--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -40,7 +40,7 @@
 <body>
    {{{body}}}
    
-    <!--Boostrap-->
+    {{!-- <!--Boostrap-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
         crossorigin="anonymous"></script>
@@ -62,6 +62,6 @@
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
     <script src="./js/recetas.js"></script>
-</body>
+</body> --}}
 
 </html>
