--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -12,9 +12,9 @@
                         <a class="nav-link active" aria-current="page" href="/index"><i class="fas fa-home"></i>
                             Inicio</a>
                     </li>
-                    <li class="nav-item">
+                    {{!-- <li class="nav-item">
                         <a class="nav-link active" href="/index"><i class="fas fa-users"></i> Sobre Nosotros</a>
-                    </li>
+                    </li> --}}
                     <li class="nav-item dropdown ">
                         <a class="nav-link active dropdown-toggle" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false"> <i class="fas fa-bread-slice"></i>
